--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
 
 <!-- partial -->
   <script  src="./script.js"></script>
-
 </body>
+<footer>
+<br>
+<br>
+<br>
+<br>
+<br>
+4조: 신홍윤, 주준모, 한창수
+</footer>
+
 </html>
