--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <!-- partial:index.partial.html -->
 
-<a href="http://www.naver.com">
+<a href="https://jsbin.com/wojoteheya/">
 <div class='highlight'></div></a>
 
 <div></div>
